ENTRYSTORE-1062: OpenRewrite automated first pass (UpgradeSpringBoot_4_0)