@@ -8,7 +8,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 
 @Getter
@@ -27,7 +26,7 @@ public class Arguments {
 	File solrPath;
 
 	public void setStorePath() throws IOException {
-		Path path = Paths.get(FileUtils.getTempDirectory().getAbsolutePath(), "benchmark-store-" + UUID.randomUUID());
+		Path path = Path.of(FileUtils.getTempDirectory().getAbsolutePath(), "benchmark-store-" + UUID.randomUUID());
 		this.storePath = Files.createDirectories(path).toFile();
 	}
 
@@ -36,7 +35,7 @@ public class Arguments {
 	}
 
 	public void setSolrPath() throws IOException {
-		Path path = Paths.get(FileUtils.getTempDirectory().getAbsolutePath(), "benchmark-solr-" + UUID.randomUUID());
+		Path path = Path.of(FileUtils.getTempDirectory().getAbsolutePath(), "benchmark-solr-" + UUID.randomUUID());
 		this.solrPath = Files.createDirectories(path).toFile();
 	}
 }
